[gd_scene load_steps=4 format=3 uid="uid://dkoo4tqq6dyyn"]

[ext_resource type="PackedScene" uid="uid://du2lmuf8dr5e5" path="res://Content/UI/Buttons/Pause/PauseButton.tscn" id="1_3qrsj"]
[ext_resource type="Script" path="res://Content/UI/Interface/HUD/hud.gd" id="1_wv6h0"]
[ext_resource type="PackedScene" uid="uid://cbgmtt1j3p262" path="res://Content/UI/Panels/Scores/ScorePanel.tscn" id="3_vatvb"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wv6h0")

[node name="GroupBox" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -243.0
offset_right = 243.0
offset_bottom = 100.0
grow_horizontal = 2
pivot_offset = Vector2(243, 0)

[node name="PauseButton" parent="GroupBox" instance=ExtResource("1_3qrsj")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 27.0
offset_bottom = 81.0
grow_horizontal = 2

[node name="ScorePanel" parent="GroupBox" instance=ExtResource("3_vatvb")]
layout_mode = 1
offset_left = 107.0
offset_top = -23.0
offset_right = 225.0
offset_bottom = 31.0

[connection signal="pressed" from="GroupBox/PauseButton" to="." method="_on_pause_button_pressed"]
